--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -4,7 +4,7 @@
     <title>
       AirBnB Clone
     </title>
-		<link rel="icon" href="images\icon.hbt.png">
+		<link rel="icon" href="images\logohbtn.png">
     <link rel="StyleSheet" href="styles/3-common.css">
     <link rel="StyleSheet" href="styles/3-header.css">
     <link rel="StyleSheet" href="styles/3-footer.css">
