--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -4,16 +4,13 @@
     <title>
       AirBnB Clone
     </title>
-		<link rel="icon" href="images\logohbtn.png">
+		<link rel="icon" href="images\icon.hbtn.png">
     <link rel="StyleSheet" href="styles/3-common.css">
     <link rel="StyleSheet" href="styles/3-header.css">
     <link rel="StyleSheet" href="styles/3-footer.css">
   </head>
   <body>
     <header>
-			<div class="logohbtn.png">
-                <p><img src="https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/logo.png" alt="hbtn.icon"> </p>
-			</div>
 		</header>
     <footer>
       Best School
