--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>AirBnB clone</title>
-    
+	<meta charset="utf-8">
+	<title>AirBnB clone</title>    
 	<link rel='stylesheet' href='styles/2-common.css'>
 	<link rel='stylesheet' href='styles/2-header.css'>
 	<link rel='stylesheet' href='styles/2-footer.css'>
 </head>
 <body>
-	<header>
-	</header>
+	<header></header>
 	<footer>
 		<p>Best School</p>
 	</footer>
