--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>
-      AirBnB Clone
-    </title>
+    <title>AirBnB Clone</title>
 		<link rel="icon" href="images/icon.hbtn.png">
     <link rel="StyleSheet" href="styles/4-common.css">
     <link rel="StyleSheet" href="styles/3-header.css">
@@ -11,13 +9,13 @@
 		<link rel="StyleSheet" href="styles/4-filters.css">
   </head>
   <body>
-    <header>
-			<div class="img-h">
+  <header>
+			<div class="logohbtn.png">
 			</div>
-		</header>
+	</header>
 		<div class="container">
 			<section class="filters">
-				<button type="button" class="b_search">Search</button>
+				<button type="button">Search</button>
 			</section>
 		</div>
     <footer>
