--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>
-      AirBnB Clone
-    </title>
-		<link rel="icon" href="images/"logohbtn.png">
+    <title>AirBnB Clone</title>
+	<link rel="icon" href="images/icon.hbtn.png">
     <link rel="StyleSheet" href="styles/4-common.css">
     <link rel="StyleSheet" href="styles/3-header.css">
     <link rel="StyleSheet" href="styles/3-footer.css">
-		<link rel="StyleSheet" href="styles/5-filters.css">
+	<link rel="StyleSheet" href="styles/5-filters.css">
   </head>
   <body>
     <header>
@@ -25,7 +23,7 @@
 					<h3>Amenities</h3>
 					<h4>Internet, Kitchen,...</h4>
 				</div>
-				<button type="button" class="b_search">Search</button>
+				<button type="button">Search</button>
 			</section>
 		</div>
     <footer>
