--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>
-      AirBnB Clone
-    </title>
-		<link rel="icon" href="images/logohbtn.png">
+	<meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/icon.hbtn.png">
     <link rel="StyleSheet" href="styles/4-common.css">
     <link rel="StyleSheet" href="styles/3-header.css">
     <link rel="StyleSheet" href="styles/3-footer.css">
-		<link rel="StyleSheet" href="styles/5-filters.css">
+	<link rel="StyleSheet" href="styles/5-filters.css">
+	<title>AirBnB Clone</title>
   </head>
   <body>
     <header>
@@ -20,16 +21,38 @@
 				<div class="locations">
 					<h3>States</h3>
 					<h4>California, Arizona,...</h4>
+					<ul class="popover">
+						<li>
+							<h2>Arizona:</h2>
+							<ul>
+                    			<li>Page</li>
+                    			<li>Page2</li>
+							</ul>
+						</li>
+                    	<li>
+						<h2>California:</h2>
+						<ul>
+                    		<li>San Francisco</li>
+                    		<li>Los Altos</li>
+						</ul>						
+						</li>
+					</ul>	
 				</div>
 				<div class="amenities">
 					<h3>Amenities</h3>
 					<h4>Internet, Kitchen,...</h4>
+					<ul class="popover">
+						<li>Internet</li>
+						<li>Kitchek</li>
+						<li>TV</li>
+						<li>Iron</li>
+					</ul>
 				</div>
-				<button type="button" class="b_search">Search</button>
+				<button type="button">Search</button>
 			</section>
 		</div>
     <footer>
-      Best School
+	<p>Best School</p>
     </footer>
-  </body>
+  	</body>
 </html>
